fix: fixed the application architecture

--- a/client/src/entities/Contact/ui/ContactsList/style.module.scss
+++ b/client/src/entities/Contact/ui/ContactsList/style.module.scss
@@ -1,6 +1,6 @@
 @use "../../../../app/styles/variables.css" as v;
 
-.ContactListContainer {
+.ContactsListContainer {
   display: flex;
   flex-direction: column;
   padding: 0 8px 8px;
