--- a/client/src/app/styles/variables.scss
+++ b/client/src/app/styles/variables.scss
@@ -1,26 +1,27 @@
-$yellow-shade-55: #ffd11a;
-$yellow-shade-60: #ffd633;
-$yellow-shade-70: #ffe066;
-$yellow-shade-80: #ffeb99;
-$yellow-shade-90: #fff5cc;
-$yellow-shade-95: #fffae5;
-$yellow-shade-97: #fffcf0;
-$yellow-shade-99: #fbfbfe;
+$gray-400: #a9a9a9;
+$gray-500: #989898;
+$gray-600: #707579;
+$gray-700: #656565;
 
-$dark-shade-08: #141414;
-$dark-shade-10: #1a1a1a;
-$dark-shade-15: #262626;
-$dark-shade-20: #333333;
-$dark-shade-25: #404040;
-$dark-shade-30: #4d4d4d;
-$dark-shade-35: #595959;
-$dark-shade-40: #666666;
+$dark-800: #2d2d2d;
+$dark-900: #212121;
+$dark-1000: #181818;
 
-$grey-shade-50: #7e7e81;
-$grey-shade-60: #98989a;
-$grey-shade-70: #b3b3b3;
-$grey-shade-80: #cccccc;
-$grey-shade-90: #e4e4e7;
-$grey-shade-95: #f1f1f3;
-$grey-shade-97: #f7f7f8;
-$grey-shade-99: #fcfcfd;
+$secondary-red: #322525;
+$primary-red: #fd5859;
+
+$black-80: rgba(0, 0, 0, 0.8);
+$black-60: rgba(0, 0, 0, 0.6);
+$black-40: rgba(0, 0, 0, 0.4);
+$black-20: rgba(0, 0, 0, 0.2);
+$black-0: rgba(0, 0, 0, 0);
+
+$white-20: rgba(255, 255, 255, 0.2);
+$white-0: rgba(255, 255, 255, 0);
+
+$gray-66-40: rgba(66, 66, 66, 0.4);
+$gray-33-80: rgba(33, 33, 33, 0.8);
+$gray-23-40: rgba(23, 23, 23, 0.4);
+
+$white: #ffffff;
+$black: #000000;
