--- a/client/src/features/Message/ui/OwnerLink/owner-link.module.scss
+++ b/client/src/features/Message/ui/OwnerLink/owner-link.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .UserAvatarLink > * {
   width: 40px;
