--- a/client/src/app/styles/normalize.css
+++ b/client/src/app/styles/normalize.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght,YOPQ@100..900,40..300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 html,
 body,
 div,
@@ -145,12 +143,12 @@ section {
 html {
   scroll-behavior: smooth;
   scrollbar-width: thin;
-  scrollbar-color: #2f2f2f transparent;
+  scrollbar-color: #2d2d2d transparent;
 }
 
 body {
   line-height: 1;
-  background-color: rgb(28, 28, 28);
+  background-color: #212121;
 }
 
 ol,
@@ -181,7 +179,7 @@ table {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #2f2f2f;
+  background-color: #2d2d2d;
   border-radius: 5px;
 }
 
@@ -196,7 +194,7 @@ input,
 textarea,
 small,
 time {
-  font-family: "Roboto", -apple-system, apple color emoji, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 /*# sourceMappingURL=normalize.css.map */
