--- a/client/src/entities/Contact/ui/AddContact/style.module.scss
+++ b/client/src/entities/Contact/ui/AddContact/style.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .ContactsContainer {
   &,
@@ -9,9 +9,9 @@
 
   > :first-child {
     margin-bottom: 16px;
-    color: white;
+    color: v.$white;
     padding: 15px;
-    border-bottom: 1px solid #2f2f2f;
+    border-bottom: 1px solid v.$dark-800;
   }
 
   .MemberContainer {
@@ -24,7 +24,7 @@
       align-items: center;
       gap: 8px;
       border-radius: 30px;
-      background-color: #2b2b2b;
+      background-color: v.$dark-800;
       max-width: 180px;
       white-space: nowrap;
       overflow: hidden;
@@ -47,7 +47,7 @@
       }
 
       &:hover {
-        background-color: #322525;
+        background-color: v.$secondary-red;
       }
     }
   }
