--- a/client/src/entities/Contact/ui/Contact/contact.module.scss
+++ b/client/src/entities/Contact/ui/Contact/contact.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .ContactBlock {
   position: relative;
@@ -7,7 +7,7 @@
   gap: 18px;
 
   > svg {
-    color: #aaaaaa;
+    color: v.$gray-400;
     width: 26px;
     height: 26px;
     margin-left: auto;
@@ -26,13 +26,13 @@
     line-height: 1.5;
 
     h4 {
-      color: white;
+      color: v.$white;
       font-weight: 500;
       font-size: 16px;
     }
 
     p {
-      color: #a9a9a9;
+      color: v.$gray-400;
       font-size: 14px;
     }
   }
