--- a/client/src/entities/Media/ui/ImageBlock/style.module.scss
+++ b/client/src/entities/Media/ui/ImageBlock/style.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .ImageBlock {
   position: relative;
@@ -15,13 +15,13 @@
     line-height: 1.3;
 
     h1 {
-      color: white;
+      color: v.$white;
       font-size: 20px;
     }
 
     p {
       font-size: 14px;
-      color: #a9a9a9;
+      color: v.$gray-400;
     }
   }
 }
@@ -36,8 +36,8 @@
     height: 80px;
     background: linear-gradient(
       0deg,
-      rgba(0, 0, 0, 0.7) 0%,
-      rgba(255, 255, 255, 0) 100%
+      v.$black-60 0%,
+      v.$white-0 100%
     );
   }
 }
