--- a/client/src/entities/Media/ui/Player/style.module.scss
+++ b/client/src/entities/Media/ui/Player/style.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .VideoPlayer {
   display: flex;
