--- a/client/src/entities/Messenger/ui/СhatBlock/style.module.scss
+++ b/client/src/entities/Messenger/ui/СhatBlock/style.module.scss
@@ -1,8 +1,8 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .ChatContainer {
   display: flex;
-  color: white;
+  color: v.$white;
   padding: 8px;
   border-radius: 12px;
   transition: 0.2s background-color ease-in-out;
@@ -16,7 +16,7 @@
     line-height: 1.5;
 
     p {
-      color: #a9a9a9;
+      color: v.$gray-400;
     }
 
     .MessengerInfo,
@@ -30,7 +30,7 @@
         font-size: 16px;
         font-weight: 600;
         margin-left: unset;
-        color: white;
+        color: v.$white;
       }
 
       p {
@@ -58,12 +58,12 @@
         min-width: 22px;
         height: 22px;
         border-radius: 50%;
-        background-color: #707579;
+        background-color: v.$gray-600;
       }
     }
   }
 
   &:hover {
-    background-color: #2d2d2d;
+    background-color: v.$dark-800;
   }
 }
