--- a/client/src/entities/Reaction/ui/ReactionsBlock/style.module.scss
+++ b/client/src/entities/Reaction/ui/ReactionsBlock/style.module.scss
@@ -1,9 +1,9 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .ReactionsBlock {
   display: flex;
   flex-wrap: wrap;
-  color: #a9a9a9;
+  color: v.$gray-400;
   font-weight: bold;
   font-size: 15px;
   gap: 5px;
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     gap: 4px;
-    background: linear-gradient(45deg, #323232, #181818);
+    background: linear-gradient(45deg, #323232, v.$dark-1000);
     padding: 1px 8px;
     border-radius: 18px;
 
