--- a/client/src/features/EditMessenger/ui/EditReactions/style.module.scss
+++ b/client/src/features/EditMessenger/ui/EditReactions/style.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .FormContainer {
   & > :first-child {
@@ -11,7 +11,7 @@
     > p {
       padding: 12px 16px;
       font-weight: 600;
-      color: white;
+      color: v.$white;
     }
 
     > button > span > span {
