--- a/client/src/features/MessengerInput/ui/InputBlock/style.module.scss
+++ b/client/src/features/MessengerInput/ui/InputBlock/style.module.scss
@@ -1,3 +1,5 @@
+@use "../../../../app/styles/variables" as v;
+
 .InputContainer {
   position: absolute;
   bottom: 15px;
@@ -13,7 +15,7 @@
     align-items: end;
     gap: 5px;
     width: 100%;
-    background-color: #212121;
+    background-color: v.$dark-1000;
     border-radius: 18px;
     padding: 5px 8px;
 
@@ -22,13 +24,13 @@
       align-items: center;
       gap: 8px;
       width: 100%;
-      color: white;
+      color: v.$white;
       line-height: 1.3;
 
       .ReplyMessage {
         width: 100%;
         border-left: 3px solid white;
-        background-color: #2f2f2f;
+        background-color: v.$dark-800;
         padding: 2px 5px;
         border-radius: 5px;
         font-size: 14px;
@@ -36,7 +38,7 @@
         transition: 0.2s background-color ease-in-out;
 
         &:hover {
-          background-color: #353535;
+          background-color: v.$dark-800;
         }
 
         h4,
@@ -45,7 +47,7 @@
         }
 
         p {
-          color: #a9a9a9;
+          color: v.$gray-400;
         }
       }
 
@@ -54,7 +56,7 @@
         width: 25px;
         height: 25px;
         padding: 8px;
-        color: #a9a9a9;
+        color: v.$gray-400;
       }
     }
 
