--- a/client/src/features/MessengerInput/ui/PopupUpload/style.module.scss
+++ b/client/src/features/MessengerInput/ui/PopupUpload/style.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .ToolsBlock {
   justify-content: space-between;
@@ -70,12 +70,12 @@
 
   > button {
     padding: 14px 16px;
-    background-color: #1c1c1c;
+    background-color: v.$dark-1000;
     border-radius: 10px;
     transition: 0.2s background-color ease-in-out;
 
     &:hover {
-      background-color: #191919;
+      background-color: v.$dark-800;
     }
   }
 }
