--- a/client/src/features/MessengerInput/ui/UploadMediaBlock/upload-media-block.module.scss
+++ b/client/src/features/MessengerInput/ui/UploadMediaBlock/upload-media-block.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .UploadMediaBlock {
   position: relative;
@@ -15,7 +15,7 @@
 
   img,
   section {
-    border: 2px solid #212121;
+    border: 2px solid v.$dark-1000;
     height: auto;
     object-fit: cover;
     max-height: 300px;
