--- a/client/src/features/Slider/ui/Slider/slider.module.scss
+++ b/client/src/features/Slider/ui/Slider/slider.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .SliderContainer {
   position: fixed;
@@ -7,7 +7,7 @@
   z-index: 5;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: v.$black-80;
   padding: 8px 20px;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -27,7 +27,7 @@
       transition: 0.2s opacity ease-in-out;
 
       .OwnerInfo {
-        color: white;
+        color: v.$white;
         line-height: 1.4;
 
         p {
@@ -93,7 +93,7 @@
     gap: 2px;
     padding: 5px;
     border-radius: 15px;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: v.$black-40;
     transform: translate(-50%, -50%);
   }
 
