--- a/client/src/pages/AuthPage/ui/auth.module.scss
+++ b/client/src/pages/AuthPage/ui/auth.module.scss
@@ -1,4 +1,4 @@
-@use "../../../app/styles/variables.css" as v;
+@use "../../../app/styles/variables" as v;
 
 .AuthContainer {
   position: relative;
