--- a/client/src/shared/ui/Button/SettingButton/setting-button.module.scss
+++ b/client/src/shared/ui/Button/SettingButton/setting-button.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .Desk {
   position: relative;
@@ -6,16 +6,16 @@
   display: block;
   line-height: 1.3;
   font-size: 14px;
-  color: #a9a9a9;
+  color: v.$gray-400;
 }
 
 .SettingButtonRed {
   &,
   svg {
-    color: #fd5859;
+    color: v.$primary-red;
   }
 
   &:hover {
-    background-color: #322525;
+    background-color: v.$secondary-red;
   }
 }
