--- a/client/src/shared/ui/Button/WhiteButton/white-button.module.scss
+++ b/client/src/shared/ui/Button/WhiteButton/white-button.module.scss
@@ -1,8 +1,8 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .WhiteButton {
   &:hover {
-    background-color: rgba(23, 23, 23, 0.5);
-    color: white;
+    background-color: v.$gray-23-40;
+    color: v.$white;
   }
 }
