--- a/client/src/shared/ui/Button/button.module.scss
+++ b/client/src/shared/ui/Button/button.module.scss
@@ -1,15 +1,15 @@
-@use "../../../app/styles/variables.css" as v;
+@use "../../../app/styles/variables" as v;
 
 .DefaultButton {
   position: relative;
-  color: #a9a9a9;
+  color: v.$gray-400;
   border-radius: 100%;
   transition:
     0.2s background-color ease-in-out,
     0.2s color ease-in-out;
 
   &:hover {
-    background-color: #303030;
+    background-color: v.$dark-800;
   }
 
   > svg {
@@ -24,7 +24,7 @@
   display: flex;
   position: unset;
   border-radius: 50%;
-  color: white;
+  color: v.$white;
 
   svg {
     width: 24px;
@@ -32,7 +32,7 @@
   }
 
   &:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: v.$black-20;
   }
 }
 
@@ -48,7 +48,7 @@
     gap: 16px;
   }
 
-  color: white;
+  color: v.$white;
   font-size: 16px;
   width: calc(100% - 32px);
   padding: 8px 16px;
@@ -56,7 +56,7 @@
   transition: 0.2s background-color ease-in-out;
 
   &:hover {
-    background-color: #2b2b2b;
+    background-color: v.$dark-800;
   }
 
   &:active {
@@ -66,7 +66,7 @@
   svg {
     min-width: 26px;
     min-height: 26px;
-    color: #aaaaaa;
+    color: v.$gray-400;
   }
 
   div {
