--- a/client/src/shared/ui/DropDown/drop-down.module.scss
+++ b/client/src/shared/ui/DropDown/drop-down.module.scss
@@ -1,4 +1,4 @@
-@use "../../../app/styles/variables.css" as v;
+@use "../../../app/styles/variables" as v;
 
 .DropDownOverlay {
   position: fixed;
@@ -14,12 +14,12 @@
   top: calc(100% + 10px);
   z-index: 4;
   padding: 5px;
-  background-color: rgba(40, 40, 40, 0.9);
+  background-color: v.$gray-33-80;
   backdrop-filter: blur(3px);
   min-width: 180px;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 10px v.$black-20;
   transform-origin: top left;
   cursor: default;
 
@@ -33,14 +33,14 @@
     height: 100%;
     background: linear-gradient(
       -45deg,
-      rgba(0, 0, 0, 0.1) 0%,
-      rgba(0, 0, 0, 0.3) 50%,
-      rgba(0, 0, 0, 0.1) 100%
+      v.$black-20 0%,
+      v.$black-40 50%,
+      v.$black-20 100%
     );
   }
 
   li {
-    color: white;
+    color: v.$white;
     text-wrap: nowrap;
     font-size: 14px;
     font-weight: bolder;
@@ -63,8 +63,8 @@
     }
 
     > div {
-      border: 1px solid rgba(0, 0, 0, 0);
-      outline: 2px solid rgb(33, 33, 33, 0.8);
+      border: 1px solid v.$black-0;
+      outline: 2px solid v.$gray-33-80;
       background: none;
 
       h1 {
@@ -73,7 +73,7 @@
     }
 
     &:hover {
-      background-color: rgba(66, 66, 66, 0.5);
+      background-color: v.$gray-66-40;
     }
   }
 }
