--- a/client/src/shared/ui/Input/Radio/radio.module.scss
+++ b/client/src/shared/ui/Input/Radio/radio.module.scss
@@ -1,3 +1,5 @@
+@use "../../../../app/styles/variables" as v;
+
 .Radio {
   display: flex;
   align-items: center;
@@ -7,10 +9,10 @@
   border-radius: 10px;
   transition: 0.2s background-color ease-in-out;
   line-height: 1.5;
-  color: white;
+  color: v.$white;
 
   &:hover {
-    background-color: #2b2b2b;
+    background-color: v.$dark-800;
   }
 
   > input {
@@ -19,7 +21,7 @@
     border: 2px solid #8c959b;
     border-radius: 50%;
     transition: background-color 0.2s ease-in-out;
-    box-shadow: 0 0 0 3px rgb(33, 33, 33) inset;
+    box-shadow: 0 0 0 3px v.$dark-900 inset;
 
     &:checked {
       background-color: #8c959b;
@@ -33,5 +35,5 @@
   display: block;
   line-height: 1.3;
   font-size: 14px;
-  color: #a9a9a9;
+  color: v.$gray-400;
 }
