--- a/client/src/shared/ui/Popup/style.module.scss
+++ b/client/src/shared/ui/Popup/style.module.scss
@@ -1,4 +1,4 @@
-@use "../../../app/styles/variables.css" as v;
+@use "../../../app/styles/variables" as v;
 
 .Popup {
   position: fixed;
@@ -8,7 +8,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: v.$black-40;
 
   &,
   > div {
@@ -21,14 +21,14 @@
     flex-direction: column;
     gap: 8px;
     width: 400px;
-    background-color: #212121;
+    background-color: v.$dark-1000;
     border-radius: 10px;
     box-shadow:
       0 2px 2px #00000024,
       0 3px 1px -2px #0000001f,
       0 1px 5px #0003;
     padding: 8px;
-    color: white;
+    color: v.$white;
     overflow: hidden;
 
     img {
@@ -49,9 +49,9 @@
   user-select: none;
 
   p {
-    color: white;
+    color: v.$white;
     padding: 12px 16px;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: v.$black-80;
     backdrop-filter: blur(10px);
     border-radius: 8px;
     font-weight: 600;
