--- a/client/src/shared/ui/PopupConfirmation/popup-confirmation.module.scss
+++ b/client/src/shared/ui/PopupConfirmation/popup-confirmation.module.scss
@@ -1,4 +1,4 @@
-@use "../../../app/styles/variables.css" as v;
+@use "../../../app/styles/variables" as v;
 
 .PopupBlock {
   position: relative;
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  color: white;
+  color: v.$white;
   padding: 16px;
   line-height: 1.3;
 
@@ -29,15 +29,15 @@
       font-weight: 600;
 
       &:hover {
-        background-color: rgb(24, 24, 24);
+        background-color: v.$dark-1000;
       }
     }
 
     & > :last-child {
-      color: #fd5859;
+      color: v.$primary-red;
 
       &:hover {
-        background-color: rgb(50, 37, 37);
+        background-color: v.$secondary-red;
       }
     }
   }
