--- a/client/src/shared/ui/Sidebar/sidebar.module.scss
+++ b/client/src/shared/ui/Sidebar/sidebar.module.scss
@@ -1,4 +1,4 @@
-@use "../../../app/styles/variables.css" as v;
+@use "../../../app/styles/variables" as v;
 
 .SidebarContainer {
   position: relative;
@@ -8,7 +8,7 @@
   max-width: 420px;
   width: 100%;
   height: 100vh;
-  background-color: #212121ff;
+  background-color: v.$dark-1000;
   overflow: hidden;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -27,7 +27,7 @@
   border-right: none;
   align-items: center;
   padding: 0;
-  background-color: #181818;
+  background-color: v.$dark-1000;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -41,10 +41,10 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #181818;
+  background-color: v.$dark-1000;
 
   .Wrapper {
-    background-color: #212121;
+    background-color: v.$dark-1000;
 
     > p {
       display: flex;
