--- a/client/src/shared/ui/Textarea/textarea.module.scss
+++ b/client/src/shared/ui/Textarea/textarea.module.scss
@@ -1,14 +1,16 @@
+@use "../../../app/styles/variables" as v;
+
 .Textarea {
   align-self: center;
-  caret-color: #656565;
+  caret-color: v.$gray-700;
   width: 100%;
   min-width: 100px;
-  color: white;
+  color: v.$white;
   line-height: 1.5;
   padding: 0 8px;
   overflow-wrap: break-word;
 
   &::placeholder {
-    color: #989898;
+    color: v.$gray-500;
   }
 }
