--- a/client/src/shared/ui/TopBar/top-bar.module.scss
+++ b/client/src/shared/ui/TopBar/top-bar.module.scss
@@ -1,4 +1,4 @@
-@use "../../../app/styles/variables.css" as v;
+@use "../../../app/styles/variables" as v;
 
 .TopBar {
   position: absolute;
@@ -6,11 +6,11 @@
   z-index: 1;
   width: 100%;
   height: 56px;
-  background-color: rgba(33, 33, 33, 0.7);
+  background-color: v.$gray-33-80;
   backdrop-filter: blur(3px);
   justify-content: space-between;
   padding: 8px 16px;
-  border-bottom: 1px solid rgb(24, 24, 24);
+  border-bottom: 1px solid v.$dark-1000;
 
   &,
   > span {
@@ -20,7 +20,7 @@
   }
 
   p {
-    color: white;
+    color: v.$white;
     font-size: 20px;
     margin: auto;
     width: 100%;
