--- a/client/src/widgets/LeftSidebar/ui/LeftSidebar/left-sidebar.module.scss
+++ b/client/src/widgets/LeftSidebar/ui/LeftSidebar/left-sidebar.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../app/styles/variables.css" as v;
+@use "../../../../app/styles/variables" as v;
 
 .TopBar {
   display: flex;
@@ -8,7 +8,7 @@
   height: 56px;
 
   > h1 {
-    color: white;
+    color: v.$white;
     font-size: 20px;
     padding-left: 24px;
   }
