--- a/client/src/widgets/Main/ui/main.module.scss
+++ b/client/src/widgets/Main/ui/main.module.scss
@@ -1,4 +1,4 @@
-@use "../../../app/styles/variables.css" as v;
+@use "../../../app/styles/variables" as v;
 
 .MainContainer {
   position: relative;
@@ -10,7 +10,7 @@
   width: 100%;
   overflow: hidden;
   left: 0;
-  background-color: black;
+  background-color: v.$black;
 
   &:after {
     content: "";
@@ -18,12 +18,11 @@
     display: flex;
     width: 100%;
     height: 100vh;
-    //background: linear-gradient(-45deg, rgba(0, 0, 0, .75) 0%, rgba(0, 0, 0, .85) 50%, rgba(0, 0, 0, .75) 100%);
     background: linear-gradient(
       -45deg,
-      rgba(0, 0, 0, 0.25) 0%,
-      rgba(0, 0, 0, 0.55) 50%,
-      rgba(0, 0, 0, 0.25) 100%
+      v.$black-20 0%,
+      v.$black-60 50%,
+      v.$black-20 100%
     );
   }
 
