--- a/client/src/app/styles/normalize.scss
+++ b/client/src/app/styles/normalize.scss
@@ -143,7 +143,7 @@ section {
 }
 
 html {
-  scroll-behavior: smooth;
+  //scroll-behavior: smooth;
   scrollbar-width: thin;
   scrollbar-color: v.$dark-800 transparent;
 }
