--- a/client/src/features/MessengerInput/ui/UploadMediaBlock/upload-media-block.module.scss
+++ b/client/src/features/MessengerInput/ui/UploadMediaBlock/upload-media-block.module.scss
@@ -7,31 +7,32 @@
   flex-wrap: wrap;
   cursor: pointer;
   width: 100%;
-  max-height: 275px;
 
-  > :first-child img {
+  & > :first-child {
     border-radius: 7.5px 7.5px 0 0;
+    max-height: 225px;
+    min-height: 80px;
   }
 
   img,
   section {
-    border: 2px solid v.$dark-1000;
+    border: .5px solid v.$dark-1000;
     height: auto;
     object-fit: cover;
-    max-height: 300px;
+    max-height: inherit;
     width: 100%;
   }
 
   > span {
     display: flex;
     width: 100%;
-    max-height: 137.5px;
 
     img {
       flex-shrink: 1;
       max-width: 100%;
       min-width: 0;
-      min-height: 100px;
+      max-height: 112.5px;
+      min-height: 80px;
     }
   }
 }
