--- a/client/src/features/MessengerSearch/ui/messenger-search.module.scss
+++ b/client/src/features/MessengerSearch/ui/messenger-search.module.scss
@@ -5,7 +5,7 @@
   top: 55px;
   width: 100%;
   height: 100%;
-  background-color: v.$dark-1000;
+  background-color: v.$dark-900;
 
   nav {
     padding: 0 16px;
@@ -62,6 +62,15 @@
       font-weight: 600;
       padding: 16px;
     }
+  }
+
+  > p {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    text-wrap: nowrap;
+    color: v.$gray-400;
   }
 
   .ContactBlock {
