--- a/client/src/features/Profile/ui/EditPassword/edit-password.module.scss
+++ b/client/src/features/Profile/ui/EditPassword/edit-password.module.scss
@@ -1,6 +1,8 @@
 @use "../../../../app/styles/variables" as v;
 
 .FormContainer {
+  background-color: v.$dark-900;
+
   &,
   .Form,
   .TopForm {
@@ -11,7 +13,7 @@
   }
 
   .TopForm {
-    padding: 80px 24px 28px;
-    gap: 28px;
+    padding: 80px 24px 24px;
+    gap: 24px;
   }
 }
