--- a/client/src/app/styles/normalize.css
+++ b/client/src/app/styles/normalize.css
@@ -142,7 +142,7 @@ section {
 
 html {
   scrollbar-width: thin;
-  scrollbar-color: #2d2d2d transparent;
+  scrollbar-color: #212121 transparent;
 }
 
 body {
