--- a/client/src/entities/Message/ui/DocumentBlock/style.module.scss
+++ b/client/src/entities/Message/ui/DocumentBlock/style.module.scss
@@ -8,6 +8,7 @@
   color: v.$white;
   padding: 5px 0;
   border-radius: 5px;
+  cursor: pointer;
   transition: 0.2s background-color ease-in-out;
 
   &:hover {
