--- a/client/src/entities/Media/ui/Player/style.module.scss
+++ b/client/src/entities/Media/ui/Player/style.module.scss
@@ -20,6 +20,7 @@
     flex-wrap: wrap;
     width: 100%;
     padding: 0 16px;
+    color: white;
     background: linear-gradient(transparent, #000000b3);
 
     button {
