--- a/client/src/widgets/Header/ui/header.module.scss
+++ b/client/src/widgets/Header/ui/header.module.scss
@@ -62,6 +62,10 @@
     font-weight: 600;
     margin: auto 0;
   }
+
+  .DropDownButton {
+    position: relative;
+  }
 }
 
 .MainHeader > :first-child {
