--- a/client/src/features/Message/ui/message.module.scss
+++ b/client/src/features/Message/ui/message.module.scss
@@ -10,6 +10,8 @@
     gap: 5px;
 
     .MessageWrapper {
+      display: flex;
+      flex-direction: column;
       line-height: 1.3;
       max-width: 70%;
       min-width: 180px;
