--- a/client/src/shared/ui/DropDown/drop-down.module.scss
+++ b/client/src/shared/ui/DropDown/drop-down.module.scss
@@ -11,7 +11,7 @@
 
 .DropDownContainer {
   position: absolute;
-  top: calc(100% + 10px);
+  top: calc(100% + 8px);
   z-index: 5;
   padding: 5px;
   background-color: v.$gray-33-80;
@@ -56,7 +56,7 @@
       cursor: pointer;
     }
 
-    > div,
+    > button > div,
     svg {
       width: 24px;
       height: 24px;
