--- a/client/src/shared/ui/Input/inputs.module.scss
+++ b/client/src/shared/ui/Input/inputs.module.scss
@@ -70,6 +70,26 @@
     border-color: transparent;
     color: transparent;
   }
+
+  &::-webkit-slider-runnable-track {
+    height: 2px;
+    border-radius: 5px;
+    background: linear-gradient(
+                    to right,
+                    v.$white var(--progress, 50%),
+                    v.$gray-400 var(--progress, 50%)
+    );
+  }
+
+  &::-moz-range-track {
+    background-color: v.$gray-400;
+  }
+
+  &::-moz-range-progress {
+    background-color: v.$white;
+    height: 2px;
+    border-radius: 5px;
+  }
 }
 
 .WideInput {
